static/css/postView.css
::-webkit-scrollbar {
    display: none; /* Hides the scrollbar */
  }
  
  * {
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none; /* IE 10+ */
  }
.postView {
    top: 0;
    left: 0;
    position: fixed;
    z-index: 2;
    width: 100%;
    height: 100%;
    background: rgba(217, 217, 217, 0.02);
    box-shadow: 0px 40px 140px rgba(0, 0, 0, 0.9);
    backdrop-filter: blur(60px);
    display: flex;
}

.postView .postCard {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
    background: rgba(217, 217, 217, 0.02);
    box-shadow: 0px 40px 140px rgba(0, 0, 0, 0.9);
    backdrop-filter: blur(60px);
    max-width: 1200px;
    max-height: 600px;
    width: 80vw;
    margin: auto;
    border-radius: 24px;
}
/* For modern browsers */

.postView .post>img {
    width: 100%;
    border-radius: 16px;
}

.postView .post {
    max-height: 80%;
    position: relative;
    width: 50%;
    display: flex;
    flex-direction: column;
    border-right: 1px solid rgba(255, 255, 255, 0.16);

    gap: 0px;
    margin: 28px 0px;
    background: none;
    overflow-y: scroll;
    overflow-x: hidden;
    text-overflow: ellipsis;
    border-radius: 0px;
    align-items: flex-start;
    flex: none;
    order: 0;
    align-self: stretch;
    flex-grow: 0;

}

.postView .text {
    display: flex;
    overflow: visible;
    text-overflow: ellipsis;
    font-family: 'Inter';
    font-style: normal;
    font-weight: lighter;
    font-size: 14px;
    line-height: 18px;
    color: #ffffffe4;
}


.text {
    font-size: 40px;
}

.postView .commentsWrap {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: calc(100% - 40px);
    padding: 0 40px;
    width: 50%;
}

.commentsWrap .inputwrap {
    width: 100%;
}

.commentsWrap .inputwrap input {
    line-height: 17.16px;
    outline: none;
    border: none;
    width: 100%;
    background: none;
    height: 100%;
}

.commentsWrap .inputwrap button {
    background: #FD5F49;
    border: none;
    padding: 1.8px 3.6px 1.8px 3.6px;
    border-radius: 7.2px;
}

.commentsWrap .inputwrap {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background: rgba(245, 245, 245, 0.08);
    border-radius: 12px;
    padding: 12px;
}

.commentsWrap .commentslist {
    padding: 6px;
    height: 400px; 
    overflow-y: scroll; 
    overflow-x: hidden;
}

.commentslist .comment {
    background-color: #FD5F49;
}

.commentCreator {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    line-height: 17px;
    letter-spacing: 0.2px;
    color: #FFFFFF;
}

.creationTime {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 400;
    font-size: 12px;
    line-height: 15px;
    letter-spacing: 0.2px;
    color: #B0B0B0;
}

.commentText {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
    letter-spacing: 0.2px;
    color: #FFFFFF;

}

.reactions {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 0px;
    gap: 7px;
}

.reaction {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: max-content;
    padding: 4px 16px;
    gap: 6.69px;
    background: rgba(255, 255, 255, 0.08);
    border-radius: 20.0816px;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0px;
    gap: 12px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.16);
    padding: 16px 0px;
    min-width: 300px;
    height: 100%;
}

.comment {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 0px;
    gap: 12px;

}

.content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0px;
    gap: 6px;
}

.texts {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 0px;
    gap: 2px;
}

